--- a/StoreHub/CustomStyle/CollectionViewCell/CustomCell1/CustomCell1CollectionViewCell.xib
+++ b/StoreHub/CustomStyle/CollectionViewCell/CustomCell1/CustomCell1CollectionViewCell.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="CustomCell1CollectionViewCell" customModule="StoreHub" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="customCell1" id="gTV-IL-0wX" customClass="CustomCell1CollectionViewCell" customModule="StoreHub" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="227" height="185"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
