--- a/StoreHub/CustomStyle/CollectionViewCell/CustomCell1/CustomCell1CollectionViewCell.xib
+++ b/StoreHub/CustomStyle/CollectionViewCell/CustomCell1/CustomCell1CollectionViewCell.xib
@@ -23,9 +23,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="227" height="165"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     </imageView>
-                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NPN-Rl-U5o">
+                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NPN-Rl-U5o">
                         <rect key="frame" x="0.0" y="130" width="227" height="55"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="ItemName" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5oN-Az-ykA">
                                 <rect key="frame" x="8" y="17" width="211" height="21"/>
@@ -36,6 +35,9 @@
                             </label>
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="55" id="m2p-es-ywW"/>
+                        </constraints>
                     </view>
                 </subviews>
             </view>
